@@ -1,0 +1,3 @@
+2018020413 0.3407621158761547 Tampa Bay Lightning @ New Jersey Devils
+2018020414 0.48372619612127354 Buffalo Sabres @ Nashville Predators
+2018020415 0.47835688999441983 Edmonton Oilers @ Dallas Stars
